[gd_scene load_steps=7 format=3 uid="uid://boh4k4iup3rqk"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_acu3a"]
[ext_resource type="Texture2D" uid="uid://cwny2qh5cti2y" path="res://assets/GameTheme1.png" id="2_w45o4"]
[ext_resource type="PackedScene" uid="uid://bfibj2qbrekva" path="res://scenes/options_menu.tscn" id="3_uubij"]
[ext_resource type="AudioStream" uid="uid://i3880gcr3wuo" path="res://assets/music/The Secret Lab.ogg" id="4_lwa1q"]
[ext_resource type="AudioStream" uid="uid://bef7nf77f5h4u" path="res://assets/music/button-198922.wav" id="5_yxkou"]
[ext_resource type="AudioStream" uid="uid://bbi6p46lfpr5j" path="res://assets/music/switch-150130.wav" id="6_8ygkh"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_acu3a")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -1.0
offset_right = 51.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_w45o4")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -98.0
offset_right = 244.0
offset_bottom = -32.0
grow_vertical = 0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
text = "START"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
text = "QUIT"

[node name="Options_Menu" parent="." instance=ExtResource("3_uubij")]
visible = false
layout_mode = 1

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_lwa1q")
volume_db = -8.771
autoplay = true
bus = &"Music"

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_yxkou")
bus = &"Sfx"

[node name="ButtonPressedStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_8ygkh")
bus = &"Sfx"

[connection signal="mouse_entered" from="VBoxContainer/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
